[package]
name = "fltk-egui"
version = "0.8.0"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>", "Adia Robbie <adyaro37@gmail.com>"]
description = "FLTK backend for egui"
repository = "https://github.com/fltk-rs/fltk-egui"
documentation = "https://docs.rs/fltk-egui"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
rust-version = "1.61"
build = "build.rs"

[dependencies]
egui = "0.19"
egui_glow = { version = "0.19", default-features = false }
arboard = { version = "2", default-features = false }
fltk = { version = "1.3", features = ["raw-window-handle", "enable-glwindow"] }
glutin = { git = "https://github.com/rust-windowing/glutin.git", rev = "24812ca" }
raw-window-handle = "0.5"

[build-dependencies]
cfg_aliases = "0.1"

[features]
default = ["x11", "glx", "wgl"]
no-pango = ["fltk/no-pango"]
wayland = ["glutin/wayland", "fltk/use-wayland"]
egl = ["glutin/egl"]
glx = ["glutin/glx"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11"]

# for the demo_windows example
[dev-dependencies]
egui_demo_lib = "0.19"
three-d = "0.13"